backface visibility fix
This prevents jagged edges on rotated images

--- a/client/styelsheets/style.less
+++ b/client/styelsheets/style.less
@@ -177,6 +177,8 @@ h3 {
 
 #highlighted-image img {
   box-shadow: 1px 2px 10px #000;
+  border: 8px solid #EEE;
+  -webkit-backface-visibility: hidden;
 }
 
 .image-caption {
@@ -218,7 +220,8 @@ h3 {
   //box-shadow: 10px 10px 49px 43px rgba(0,0,0,0.75);
   //box-shadow: 0px 8px 30px #111;
   box-shadow: 0px 10px 46px -3px rgba(0,0,0,0.75);
-  //border: 3px solid #FFF;
+  border: 5px solid #EEE;
+  -webkit-backface-visibility: hidden;
 }
 
 /**
